--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
     <link ref="stylesheet" href="./style.css">
+
+    <style>
+
+    </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="">Inline Method</button>
   </body>
 </html>
