Create ruleset for p element

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -8,7 +8,11 @@
     <link ref="stylesheet" href="./style.css">
 
     <style>
-
+      p {
+        background-color: green;
+        color: white;
+        font-size: 18px;
+      }
     </style>
   </head>
   <body>
