--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
-    <link ref="stylesheet" href="./style.css">
 
     <style>
       p {
@@ -14,6 +13,7 @@
         font-size: 18px;
       }
     </style>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div>Style me via the external method!</div>
